[package]
name = "rust-api"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
subxt = "0.42.1"
tokio = { version = "1.0", features = ["full"] }
sp-keyring = "41.0.0"
sp-core = "36.1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors"] }
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
chrono = "0.4.41"
subxt-signer = "0.42.1"