[package]
name = "hardware-info"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
codec.workspace = true
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
scale-info.workspace = true
serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }

# Hardware monitoring dependencies (std only)
sysinfo = { version = "0.35.2", optional = true }
num_cpus = { version = "1.0", optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "serde",
    "sysinfo",
    "num_cpus",
    "scale-info/std"
]