[package]
name = "profiles"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-identity.workspace = true
scale-info = { features = ["derive"], workspace = true }
sp-std.workspace = true

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
    "codec/std",
    "pallet-identity/std",
    "scale-info/std",
    "sp-std/std"
]