[package]
name = "proxy-wrapper"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-balances.workspace = true
pallet-proxy.workspace = true
scale-info = { features = ["derive"], workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
    "pallet-proxy/std",
    "codec/std",
    "scale-info/std"
]