[package]
name = "primitives"
version = "0.1.0"
edition = "2024"

[dependencies]
codec.workspace = true
frame-support.workspace = true
sp-runtime.workspace = true
serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }
scale-info = { features = ["derive"], workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "serde",
    "scale-info/std",
    "frame-support/std"
]